# acp

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE_REQUEST.yml  config.yml
.github/workflows/: docs.yml  main.yml  release.yml
docs/: Architecture&Core_Protocol_Design.md  Data_Security&Privacy.md  Deployment&Infrastructure.md  MCP_Integration&Compatibility.md  Protocol_Implementation&Encoding.md  README.md  Testing&Quality_Assurance.md  UI&User+Agent_Experience.md  _sidebar.md  docs.json  index.html  package-lock.json  package.json  style.css
docs/about/: contribute.mdx  mcp-and-a2a.mdx  mission-and-team.mdx  whats-next.mdx
docs/community-calls/: 20-05-2025.md
docs/core-concepts/: agent-detail.mdx  agent-discovery.mdx  agent-lifecycle.mdx  architecture.mdx  errors.mdx  message-structure.mdx  overview.mdx  production-grade.mdx
docs/how-to/: await-external-response.mdx  build-stateful-agent.mdx  compose-agents.mdx  debug.mdx  discover-and-run-agent.mdx  generate-artifacts.mdx  share-agents.mdx  wrap-existing-agent.mdx
docs/integrations/: cursor.mdx  mcp-adapter.mdx
docs/introduction/: example-agents.mdx  quickstart.mdx  uv-primer.mdx  welcome.mdx
docs/python-sdk/: client.mdx  models.mdx  server.mdx
docs/sdks/python/: Makefile  api-reference.mdx
docs/spec/: agents-get.mdx  agents-list.mdx  agents-manifest.mdx  openapi.yaml  ping.mdx  run-cancel.mdx  run-create.mdx  run-get-events.mdx  run-get.mdx  run-resume.mdx
examples/basic/await-external-approval/: client.py
examples/basic/clients/: simple.py
examples/basic/servers/: standalone.py
examples/integrations/gpt-researcher/: client_stream.py
examples/python/acp-agent-generator/: .env.example  README.md  agent.py  client.py  mcpdoctool.py  pyproject.toml
examples/python/await-external-approval/: agent.py  client.py  pyproject.toml
examples/python/basic/: pyproject.toml
examples/python/beeai-canvas/: README.md  agent.py  client.py  pyproject.toml
examples/python/beeai-chat/: agent.py  client.py  pyproject.toml
examples/python/beeai-evaluator-optimizer/: agent.py  code_reviewer_tool.py  pyproject.toml
examples/python/beeai-framework-chat/: agent.py  client.py
examples/python/beeai-handoff/: agent.py  pyproject.toml  run_agent_tool.py
examples/python/beeai-orchestrator/: agent.py  pyproject.toml  translation_tool.py
examples/python/beeai-paralelization/: agent.py  pyproject.toml
examples/python/beeai-prompt-chaining/: agent.py  pyproject.toml
examples/python/beeai-routing/: agent.py  pyproject.toml  translation_tool.py
examples/python/beeai-slack-mcp/: .env.sample  README.md  agent.py  client.py  pyproject.toml
examples/python/crewai-song-writer/: agent.py  client.py  pyproject.toml
examples/python/gpt-researcher/: agent.py  client_stream.py  client_sync.py  pyproject.toml
examples/python/lang-graph/: agent.py  client_sync.py
examples/python/langgraph-greeting/: agent.py  client_stream.py  client_sync.py  pyproject.toml
examples/python/llama-index-rag/: agent.py  client_stream.py  client_sync.py  pyproject.toml  requirements.txt
examples/python/openai-story-writer/: README.md  agent.py  client.py  pyproject.toml
python/: README.md  pyproject.toml  pytest.ini
python/docs/: _sidebar.md  client.md  conf.py  index.html  index.rst  models.md  server.md
python/examples/clients/: advanced.py  session.py  simple.py  stream.py
python/examples/servers/: awaiting.py  echo.py  historian.py  multi-agent.py  multi-echo.py  sync_echo.py
python/src/acp_sdk/: __init__.py  instrumentation.py  models.py  test.py  version.py
python/src/acp_sdk/client/: __init__.py  client.py  types.py  utils.py
python/src/acp_sdk/models/: __init__.py  errors.py  models.py  schemas.py  types.py
python/src/acp_sdk/server/: __init__.py  agent.py  app.py  bundle.py  context.py  errors.py  executor.py  logging.py  server.py  session.py  telemetry.py  types.py  utils.py
python/src/acp_sdk/server/store/: __init__.py  memory_store.py  postgresql_store.py  redis_store.py  store.py  utils.py
python/src/acp_sdk/shared/: __init__.py  resources.py
python/tests/: conftest.py  test_e2e.py
python/tests/e2e/: config.py
python/tests/e2e/fixtures/: client.py  server.py
python/tests/e2e/test_suites/: test_discovery.py  test_runs.py  test_sessions.py
python/tests/unit/client/: test_client.py  test_utils.py
python/tests/unit/models/: test_models.py
python/tests/unit/server/: test_server.py
typescript/: README.md  package.json  tsup.config.ts
typescript/src/: index.ts  instrumentation.ts
(+62 files in other folders)
